--- a/apps/node-server/package.json
+++ b/apps/node-server/package.json
@@ -6,22 +6,21 @@
     "dev": "nodemon --exec \"node -r esbuild-register ./src/index.ts\" -e .ts",
     "build": "tsc && resolve-tspaths",
     "start": "node -r esbuild-register dist",
-    "clean": "rm -rf dist && rm -rf node_modules",
-    "db:generate": "drizzle-kit generate --config=src/drizzle.config.ts",
-    "db:migrate": "drizzle-kit migrate --config=src/drizzle.config.ts",
-    "db:push": "pnpm db:generate && pnpm db:migrate",
-    "db:studio": "drizzle-kit studio --config=src/drizzle.config.ts",
-    "db:seed": "tsx src/db/seed"
+    "clean": "rm -rf dist && rm -rf node_modules"
   },
   "dependencies": {
-    "@packages/database": "workspace:*",
+    "@aws-sdk/client-s3": "^3.617.0",
+    "@aws-sdk/s3-request-presigner": "^3.617.0",
     "@packages/broker": "workspace:*",
+    "@packages/database": "workspace:*",
+    "aws-sdk": "^2.1661.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "drizzle-orm": "^0.31.2",
     "express": "^4.18.3",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
+    "multer": "1.4.5-lts.1",
     "nodemailer": "^6.9.14",
     "pg": "^8.12.0",
     "socket.io": "^4.7.5",
@@ -33,6 +32,7 @@
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/morgan": "^1.9.9",
+    "@types/multer": "^1.4.11",
     "@types/node": "^20.11.24",
     "@types/nodemailer": "^6.4.15",
     "@types/pg": "^8.11.6",
