--- a/apps/python-server/package.json
+++ b/apps/python-server/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "dev": "source venv/bin/activate && fastapi dev app/main.py"
+    "dev": "source venv/bin/activate && uvicorn app.main:app --reload --port 8002"
   },
   "devDependencies": {
     "@tools/typescript-config": "workspace:*"
