--- a/apps/web-client/package.json
+++ b/apps/web-client/package.json
@@ -14,15 +14,20 @@
     "@packages/ui-utils": "workspace:*",
     "@tanstack/react-table": "^8.17.3",
     "date-fns": "^3.6.0",
+    "fix-webm-duration": "^1.0.6",
     "framer-motion": "^11.2.11",
     "geist": "^1.3.0",
     "lucide-react": "^0.395.0",
     "next": "14.2.4",
     "react": "^18",
     "react-dom": "^18",
+    "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.52.0",
     "react-markdown": "^9.0.1",
+    "react-webcam": "^7.2.0",
+    "recordrtc": "^5.6.2",
     "server-only": "^0.0.1",
+    "socket.io-client": "^4.7.5",
     "sonner": "^1.5.0",
     "zod": "^3.23.8"
   },
@@ -32,6 +37,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/recordrtc": "^5.6.14",
     "autoprefixer": "^10.4.19",
     "postcss": "^8.4.38",
     "tailwindcss": "^3.4.4",
