--- a/apps/web-client/tsconfig.json
+++ b/apps/web-client/tsconfig.json
@@ -9,7 +9,7 @@
     "paths": {
       "@/*": ["./src/*"],
       "@ui/*": ["../../packages/ui/src/*"],
-      "@ui-utils/*": ["../../packages/ui-utils/src/*"],
+      "@ui-utils/*": ["../../packages/ui-utils/src/*"]
     }
   },
   "include": [
