--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -17,7 +17,8 @@
     "react": "^18",
     "react-hook-form": "^7.52.0",
     "sonner": "^1.5.0",
-    "zod": "^3.23.8"
+    "zod": "^3.23.8",
+    "react-dropzone": "^14.2.3"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.13",
@@ -41,6 +42,7 @@
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-popover": "^1.1.1",
+    "@radix-ui/react-progress": "^1.1.0",
     "@radix-ui/react-radio-group": "^1.2.0",
     "@radix-ui/react-scroll-area": "^1.1.0",
     "@radix-ui/react-select": "^2.1.1",
@@ -58,7 +60,6 @@
     "input-otp": "^1.2.4",
     "next-themes": "^0.3.0",
     "react-day-picker": "^8.10.1",
-    "socket.io-client": "^4.7.5",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7"
   },
