--- a/apps/web-client/package.json
+++ b/apps/web-client/package.json
@@ -29,7 +29,8 @@
     "server-only": "^0.0.1",
     "socket.io-client": "^4.7.5",
     "sonner": "^1.5.0",
-    "zod": "^3.23.8"
+    "zod": "^3.23.8",
+    "recharts": "^2.12.7"
   },
   "devDependencies": {
     "@tools/tailwind-config": "workspace:*",
