--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -15,10 +15,11 @@
     "lucide-react": "^0.395.0",
     "next": "14.2.4",
     "react": "^18",
+    "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.52.0",
     "sonner": "^1.5.0",
     "zod": "^3.23.8",
-    "react-dropzone": "^14.2.3"
+    "recharts": "^2.12.7"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.13",
