--- a/.gitignore
+++ b/.gitignore
@@ -10,10 +10,14 @@ node_modules
 .env.local
 .env.development.local
 .env.test.local
+.env.prod
 .env.production.local
+
+docker-compose.prod.yml
 
 # Testing
 coverage
+output
 
 # Turbo
 .turbo
