--- a/apps/web-client/package.json
+++ b/apps/web-client/package.json
@@ -25,12 +25,13 @@
     "react-hook-form": "^7.52.0",
     "react-markdown": "^9.0.1",
     "react-webcam": "^7.2.0",
+    "recharts": "^2.12.7",
     "recordrtc": "^5.6.2",
     "server-only": "^0.0.1",
+    "sharp": "^0.33.4",
     "socket.io-client": "^4.7.5",
     "sonner": "^1.5.0",
-    "zod": "^3.23.8",
-    "recharts": "^2.12.7"
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@tools/tailwind-config": "workspace:*",
