--- a/tools/nginx/default.conf
+++ b/tools/nginx/default.conf
@@ -48,7 +48,7 @@ server {
 		proxy_pass http://python-server:8002;
 	}
 
-	location /socket.io/ {
+	location /socket.io {
 		proxy_http_version 1.1;
 		proxy_cache_bypass $http_upgrade;
 
