--- a/package.json
+++ b/package.json
@@ -5,12 +5,16 @@
     "dev": "turbo dev",
     "build": "turbo build",
     "build:packages": "turbo run build --filter=\"./packages/*\"",
-    "ui:add": "pnpm --filter @packages/ui ui:add",
     "format": "turbo format --continue --",
     "format:fix": "turbo format --continue -- --write",
     "lint": "turbo lint --continue --",
     "lint:fix": "turbo lint --continue -- --apply",
-    "clean": "turbo run clean"
+    "clean": "turbo run clean",
+    "ui:add": "pnpm --filter @packages/ui ui:add",
+    "db:generate": "pnpm --filter @packages/database db:generate",
+    "db:migrate": "pnpm --filter @packages/database db:migrate",
+    "db:push": "pnpm --filter @packages/database db:push",
+    "db:studio": "pnpm --filter @packages/database db:studio"
   },
   "devDependencies": {
     "turbo": "^2.0.4",
